--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 
 .sidebarWrapper {
     position: absolute;
@@ -7,12 +11,16 @@
     width: 250px;
     background-color:#333;
     transition: transform 0.3s ease;
-    transform: translateX(100%);
+    transform: translateX(250px);
     z-index: 3;
+    overflow-y: auto;
+    
+    
 }
 
 .sidebarWrapper.active {
     transform: translateX(0); 
+   
 }
 
 
